--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <input type="text" placeholder="Enter to-do">
     <button type="submit">Submit to list!</button>
   </form>
-
+  <p>Click item to strikethrough. Click X to delete.</p>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src ="js/script.js"></script>
