--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link href='https://fonts.googleapis.com/css?family=Waiting+for+the+Sunrise' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="css/sweetalert.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<title>Derek's to-do list</title>
 </head>
@@ -14,11 +15,14 @@
     <li>Go to school<span> -X</span></li>
   </ul>
   <form id="to-do">
-    <input type="text" placeholder="Enter to-do">
+    <input type="text" id="newTodo" placeholder="Enter to-do">
     <button type="submit">Submit to list!</button>
   </form>
-  <p>Click item to strikethrough. Click X to delete.</p>
+  <p>Click item to strikethrough. Click X to delete.<br/>Click and Drag to sort.</p>
+
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+<script src ="js/sweetalert.min.js"></script>
 <script src ="js/script.js"></script>
 </html>
